--- a/custom/mabany_real_estate/views/property_view.xml
+++ b/custom/mabany_real_estate/views/property_view.xml
@@ -248,6 +248,8 @@
                                                    readonly="1"/>
                                             <field name="sales_price" class="oe_subtotal_footer_separator"
                                                    readonly="1"/>
+                                            <field name="sales_pricelist" class="oe_subtotal_footer_separator"
+                                                   readonly="1"/>
                                         </group>
                                     </group>
 
@@ -329,6 +331,17 @@
 
 
                                 </group>
+                            </page>
+                            <page name="pricelist"
+                                  string="Pricelist">
+                                <field name="pricelist_ids">
+                                    <tree editable="bottom">
+                                        <field name="date_from"/>
+                                        <field name="date_to"/>
+                                        <field name="no_unit"/>
+                                        <field name="new_salesprice"/>
+                                    </tree>
+                                </field>
                             </page>
 
                         </notebook>
@@ -541,6 +554,17 @@
             <field name="binding_view_types">form,list</field>
             <field name="state">code</field>
             <field name="code">action = records.get_gross()</field>
+        </record>
+
+        <record id="ir_cron_sales_pricelist" model="ir.cron">
+            <field name="name">sales pricelist</field>
+            <field name="model_id" ref="product.model_product_product"/>
+            <field name="state">code</field>
+            <field name="code">model.calc_sales_pricelist()</field>
+            <field name="interval_number">10</field>
+            <field name="interval_type">minutes</field>
+            <field name="numbercall">-1</field>
+            <field name="doall" eval="False"/>
         </record>
 
 
